[project]
name = "ai-lib-contrib"
version = "0.1.0"
description = "AI library contributions and experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.99.0",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "pygithub>=2.3",
]

[dependency-groups]
dev = [
  "ruff>=0.9",
  "pytest>=8",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
